Channel report 34 Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/bill_all_view.xhtml
+++ b/src/main/webapp/bill_all_view.xhtml
@@ -326,6 +326,10 @@
                                         <h:outputLabel value="#{bip.fee.name}"/>
                                     </p:column> 
                                     <p:column>
+                                        <f:facet name="header">Fee Name</f:facet>
+                                        <h:outputLabel value="#{bip.fee.feeType}"/>
+                                    </p:column> 
+                                    <p:column>
                                         <f:facet name="header">Speciality</f:facet>
                                         <h:outputLabel value="#{bip.fee.speciality.name}"/>
                                     </p:column> 
