--- a/src/main/webapp/channel/report_patient_count.xhtml
+++ b/src/main/webapp/channel/report_patient_count.xhtml
@@ -32,7 +32,7 @@
                             <p:calendar id="toDate" value="#{channelReportController.toDate}" navigator="true" pattern="dd MMMM yyyy HH:mm:ss" >
                             </p:calendar>
                             
-                            <p:outputLabel value="Fee Type" />
+                            <p:outputLabel value="Paid Only" />
                             <p:selectBooleanCheckbox value="#{channelReportController.paid}" />
 
                         </h:panelGrid>
