--- a/src/main/webapp/channel/management_index.xhtml
+++ b/src/main/webapp/channel/management_index.xhtml
@@ -17,6 +17,7 @@
                         <p:panelGrid columns="1" >
                             <p:commandButton value="Agencies" action="/channel/institutions" ajax="false" ></p:commandButton>
                             <p:commandButton value="Agenciey Credit Limit Update" action="/channel/institutions_udate_credit_limit" ajax="false" ></p:commandButton>
+                            <p:commandButton value="Agenciey Credit Limit Update(Bulk)" action="/channel/channel_agent_credit_bulk_update" ajax="false" ></p:commandButton>
                             <p:commandButton value="Add Channel Book to Agency" ajax="false" action="/channel/channel_agent_referece_book" />
                         </p:panelGrid>
                     </p:panel>
