--- a/src/main/webapp/channel/channel_report_agent_payment_bill.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_payment_bill.xhtml
@@ -37,7 +37,7 @@
                                     </p:commandButton>
                                 </h:panelGrid>
                             </h:panelGroup>
-                            <p:panel id="reportPrint" styleClass="summeryBorder">
+                            <p:panel id="reportPrint" styleClass="summeryBorder noBorder">
                                 <p:dataTable id="tblBills" value="#{channelReportTempController.bills}" var="bill" >
                                     <f:facet name="header">
                                         <p:outputLabel value="#{sessionController.loggedUser.institution.name}" />
