channel / #339 Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_report_agent_history_1.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_history_1.xhtml
@@ -91,8 +91,14 @@
                                     <f:convertDateTime pattern="HH:mm:ss" />
                                 </p:outputLabel>
                             </p:column>
+                            <p:column rendered="false">
+                                <p:outputLabel value="#{a.historyType}"/>
+                            </p:column>
                             <p:column>
                                 <p:outputLabel value="Deposit"  rendered="#{a.historyType eq 'ChannelDeposit'}"/>
+                                <p:outputLabel value="Deposit Cancel"  rendered="#{a.historyType eq 'ChannelDepositCancel'}"/>
+                                <p:outputLabel value="Cancel"  rendered="#{a.historyType eq 'ChannelBooking' and a.bill.billClassType eq 'CancelledBill'}"/>
+                                <p:outputLabel value="Refunded"  rendered="#{a.historyType eq 'ChannelBooking' and a.bill.billClassType eq 'RefundBill'}"/>
                                 <p:outputLabel value=""  rendered="#{a.historyType ne 'ChannelDeposit'}"/>
                             </p:column>
                             <p:column styleClass="numberCol" >
