--- a/src/main/webapp/channel/channel_nurse_view.xhtml
+++ b/src/main/webapp/channel/channel_nurse_view.xhtml
@@ -31,32 +31,44 @@
 
                 <p:dataTable value="#{channelReportController.nurseViewSessions}" selection="#{channelReportController.selectedBillSessions}" var="bs" rowKey="#{bs.id}">
 
-                    <p:column headerText="No">#{bs.serialNo}</p:column>
-                    <p:column headerText="Booking Id">#{bs.bill.bookingId}</p:column>
+                    <p:column headerText="No">
+                        #{bs.serialNo}&nbsp;&nbsp;<p:inputText style="width: 20px;"/>
+                    </p:column>
+                    <p:column headerText="Bill No">
+                        <p:outputLabel value="#{bs.bill.insId}"/>
+                    </p:column>
                     <p:column headerText="Patient Name">#{bs.bill.patient.person.nameWithTitle}</p:column>
-                    <p:column headerText="Paid or Not">
-                        <p:outputLabel rendered="#{bs.bill.paidAmount eq 0}" value="Credit" style="color: red;"/>
-                        <p:outputLabel rendered="#{bs.bill.paidAmount ne 0}" value="Paid"/>
+                    <p:column headerText="Remark">
+                        <p:outputLabel rendered="#{bs.bill.paidAmount eq 0}" value="To Paid" style="color: red;"/>
+                        <p:outputLabel rendered="#{bs.bill.paidAmount ne 0}" value="Paid" style="color: green;"/>
                     </p:column>
                     <p:column headerText="Bill Type">
-                        #{bs.bill.billType}
+                        <p:outputLabel value="#{bs.bill.billType}"/>
                     </p:column>
-                    <p:column headerText="Remark">
+                    <p:column headerText="C / R" style="text-align: center;">
                         <p:outputLabel value="Cancelled" rendered="#{bs.bill.cancelled==true}" style="color: red;"/>
                         <p:outputLabel value="Refunded" rendered="#{bs.bill.refunded==true}" style="color: red;"/>
+                        <p:outputLabel value="-" rendered="#{bs.bill.refunded==false and bs.bill.cancelled==false}"/>
 
                     </p:column>
-                    <p:column headerText="Agent Name">
-                        <p:outputLabel value="#{bs.bill.creditCompany.name}" rendered="#{bs.bill.creditCompany ne null}"/>  
-                        <p:outputLabel value="(#{bs.bill.creditCompany.institutionCode})" rendered="#{bs.bill.creditCompany ne null}"/> 
+                    <p:column headerText="Agent/Emp" style="text-align: center;">
+                        <p:outputLabel value="#{bs.bill.creditCompany.name}" rendered="#{bs.bill.billType eq 'ChannelAgent'}"/>  
+                        <p:outputLabel value="(#{bs.bill.creditCompany.institutionCode})" rendered="#{bs.bill.billType eq 'ChannelAgent'}"/>
+
+                        <p:outputLabel value="Booking" rendered="#{bs.bill.billType eq 'ChannelStaff' or bs.bill.billType eq 'ChannelOnCall'}"/>
+
+                        <p:outputLabel value="-" rendered="#{bs.bill.billType ne 'ChannelAgent' and 
+                                                             bs.bill.billType ne 'ChannelStaff' and bs.bill.billType ne 'ChannelOnCall' }"/>
+
                     </p:column>                
-                    <p:column headerText="Agent Ref No">
-                        <p:outputLabel value="#{bs.bill.insId}"/>                          
+                    <p:column headerText="Agent Ref No" style="text-align: center;">                        
+                        <p:outputLabel value="#{bs.billItem.agentRefNo}" rendered="#{bs.billItem.agentRefNo ne null}"/>
+                        <p:outputLabel value="-" rendered="#{bs.billItem.agentRefNo eq ''}"/>
                     </p:column>
-                    <p:column selectionMode="multiple" headerText="Mark Absent"></p:column>
+                    <p:column selectionMode="multiple" headerText="Mark Absent" style="text-align: center;"></p:column>
                     <p:column headerText="P/A">
-
-                        <p:outputLabel value="Absent"  rendered="#{bs.absent}"/>  
+                        <p:outputLabel value="Absent"  rendered="#{bs.absent}" style="color: red;"/>
+                        <p:outputLabel value="Present"  rendered="#{!bs.absent}" style="color: green;"/>
                     </p:column> 
 
                 </p:dataTable>
