--- a/src/main/webapp/channel/channel_agent_referece_book.xhtml
+++ b/src/main/webapp/channel/channel_agent_referece_book.xhtml
@@ -24,14 +24,12 @@
                         <p:column>#{vt.name}</p:column>
                     </p:autoComplete>
                     <p:outputLabel value="Book Number" />
-                    <p:inputText value="#{agentReferenceBookController.agentReferenceBook.bookNumber}"  >
-                        <f:convertNumber parent="#,###,##0.00" />
-                    </p:inputText>
+                    <pe:inputNumber value="#{agentReferenceBookController.agentReferenceBook.bookNumber}" decimalPlaces="0" />
                     <p:outputLabel value="Strarting Reference Number" />
-                    <!--<p:inputText value="#{agentReferenceBookController.agentReferenceBook.startingReferenceNumber}" />-->
                     <pe:inputNumber value="#{agentReferenceBookController.agentReferenceBook.startingReferenceNumber}" decimalPlaces="0" />
                     <p:outputLabel value="Ending Reference Number" />
-                    <p:inputText value="#{agentReferenceBookController.agentReferenceBook.endingReferenceNumber}" />
+                    <pe:inputNumber value="#{agentReferenceBookController.agentReferenceBook.endingReferenceNumber}" decimalPlaces="0" />
+                    
                     <p:commandButton action="#{agentReferenceBookController.saveAgentBook}" value="Save" ajax="false" ></p:commandButton> 
                     <p:commandButton action="#{agentReferenceBookController.makeNull}" value="Clear" ajax="false" ></p:commandButton> 
 
