Doctor Leave Report Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_report_agent_balance.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_balance.xhtml
@@ -15,6 +15,10 @@
             <p:panel header="Cannel Agent Reperence Book">
                 <f:facet name="header" >
                     <p:outputLabel value="Cannel Agent Current Balance" />
+                    <p:commandButton id="btnBack" value="Back" 
+                                     action="/channel/channel_reports" style="float: right;"
+                                     ajax="false">
+                    </p:commandButton>
                 </f:facet>
                 <h:panelGrid>
                     <h:panelGrid columns="3" >
