--- a/src/main/webapp/channel/channel_doctor_leave_by_service_session.xhtml
+++ b/src/main/webapp/channel/channel_doctor_leave_by_service_session.xhtml
@@ -4,59 +4,60 @@
                 template="/resources/template/template.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
-                xmlns:f="http://java.sun.com/jsf/core">
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:poue="http://primefaces.org/ui/extensions">
 
     <ui:define name="content">
         <h:form>
             <h:panelGrid columns="4" id="gridSelections" styleClass="alignTop">
 
-                <h:panelGroup id="panSpeciality">
-                    <table  header="Specialities" styleClass="noPaddingMargin" > 
-                        <tr>
-                            <th>
-                                <h:outputLabel value="Specialities" ></h:outputLabel>
-                            </th>
-                        </tr>
-                        <tr>
-                            <td>
-                                <h:panelGrid columns="1">
-                                    <p:selectOneListbox converter="specilityCon" 
-                                                        id="acSpeciality" 
-                                                        value="#{bookingController.speciality}" 
-                                                        style="height: 300px; width: 200px; padding: 0px; margin: 0px;">
-                                        <f:selectItems value="#{doctorSpecialityController.items}" var="s" itemLabel="#{s.name}" itemValue="#{s}" />
-                                        <p:ajax  event="change" process="@this" update="scStaff tblSessionsOfSelectedConsultant" listener="#{bookingController.generateSessions}"/> 
-                                        <p:ajax  event="click" process="@this" update="scStaff tblSessionsOfSelectedConsultant" listener="#{bookingController.generateSessions}"/> 
-                                    </p:selectOneListbox>
-                                </h:panelGrid>
-                            </td>
-                        </tr>
-
-                    </table>
-                </h:panelGroup>
-
+                <h:panelGrid columns="1"  id="panSpeciality" styleClass="noBorderGrid1">
+                    <p:inputText autocomplete="off" id="txtSearch" value="#{doctorSpecialityController.selectText}" style="width: 176px;" placeholder="Specialities" >
+                        <f:ajax execute="txtSearch" render="acSpeciality" event="keyup" />
+                        <p:ajax  event="keyup" process="@this" update=":#{p:component('scStaff')}  :#{p:component('tblSessionsOfSelectedConsultant')}" listener="#{bookingController.listnerStaffListForSpecilitySelectedText}"/> 
+                    </p:inputText>
+                    <p:dataTable  scrollable="true" scrollHeight="280"
+                                  id="acSpeciality"
+                                  selection="#{bookingController.speciality}"
+                                  rowKey="#{spe.id}"
+                                  value="#{doctorSpecialityController.selectedItems}"  
+                                  var="spe" 
+                                  selectionMode="single" 
+                                  style="height: 300px; width: 200px; padding: 0px; margin: 0px;">
+                        <p:ajax  event="rowSelect" process="@this" update=":#{p:component('scStaff')}  :#{p:component('tblSessionsOfSelectedConsultant')}" listener="#{bookingController.listnerStaffListForRowSelect}"/> 
+                        <p:ajax  event="rowSelect" process="@this" update=":#{p:component('scStaff')}  :#{p:component('tblSessionsOfSelectedConsultant')}" listener="#{bookingController.generateSessions}"/> 
+                        <p:column style="text-wrap: avoid; text-overflow: clip; white-space: nowrap;" >
+                            <h:outputText id="lblSpeName" value="#{spe.name}" ></h:outputText>
+                            <poue:tooltip for="lblSpeName" value="#{spe.name}"  showDelay="0" hideDelay="0"  atPosition="left bottom" ></poue:tooltip>
+                        </p:column>
+                    </p:dataTable>
+                </h:panelGrid>
+                
                 <h:panelGroup id="scStaff" >
+                    <p:inputText autocomplete="off" id="txtSearch2" value="#{bookingController.selectText}" style="width: 176px;margin-left: 2px;" placeholder="Consultant" >
+                        <f:ajax  event="keyup" execute="@this" render=":#{p:component('tblCon')} :#{p:component('panSpeciality')}  :#{p:component('tblSessionsOfSelectedConsultant')}" listener="#{bookingController.listnerStaffRowSelect}"/> 
+                    </p:inputText>
+                    <p:dataTable id="tblCon"  var="mys" rowKey="#{mys.id}" value="#{bookingController.consultants}"
+                                 selection="#{bookingController.staff}" scrollable="true" scrollHeight="280"
+                                 style="height: 300px; width: 200px; padding: 2px; margin: auto;" 
+                                 selectionMode="single" >
+                        <p:column style="text-wrap: avoid; text-overflow: clip; white-space: nowrap;">
+                            <h:outputText id="lblConName" value="#{mys.person.name}" />
+                            <poue:tooltip for="lblConName" value="#{mys.person.nameWithTitle}" 
+                                          showDelay="0" hideDelay="0" 
+                                          atPosition="left bottom" ></poue:tooltip>
+                        </p:column>
+                        <p:ajax  event="rowSelect" 
+                                 process="@this" 
+                                 update=":#{p:component('tblSessionsOfSelectedConsultant')}"  
+                                 listener="#{bookingController.generateSessions}"/>
+                        <p:ajax  event="rowSelect" 
+                                 process="@this" 
+                                 update=":#{p:component('tblSessionsOfSelectedConsultant')} :#{p:component('spec')}"  
+                                 listener="#{serviceSessionLeaveController.fillLeaveItems}"/>
+                    </p:dataTable>
 
-                    <table >
-                        <tr>
-                            <th>
-                                <h:outputLabel value="Consultants" ></h:outputLabel>
-                            </th>
-                        </tr>
-                        <tr>
-                            <td>
-                                <h:panelGrid columns="1">
-                                    <p:selectOneListbox  converter="stfcon" value="#{bookingController.staff}" style="height: 300px; width: 200px; padding: 2px; margin: auto;" >
-                                        <f:selectItems value="#{bookingController.consultants}" var="mys" itemLabel="#{mys.person.nameWithTitle}" itemValue="#{mys}" />
-                                        <p:ajax  event="click" process="@this scStaff" update=":#{p:component('tblSessionsOfSelectedConsultant')} :#{p:component('tbl')} "  
-                                                 listener="#{bookingController.generateSessions}"/>
-                                        <p:ajax  event="click" process="@this scStaff" update=":#{p:component('tblSessionsOfSelectedConsultant')} :#{p:component('tbl')} "  
-                                                 listener="#{serviceSessionLeaveController.fillLeaveItems}"/>
-                                    </p:selectOneListbox>
-                                </h:panelGrid>
-                            </td>
-                        </tr>
-                    </table>
+
 
                 </h:panelGroup>
 
