--- a/src/main/webapp/channel/channel_report_agent_history_1.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_history_1.xhtml
@@ -13,6 +13,13 @@
         <h:form>
 
             <p:panel header="Statement Of Agent Account">
+                <f:facet name="header">
+                    <p:outputLabel value="Statement Of Agent Account" />
+                    <p:commandButton id="btnBack" value="Back" 
+                                     action="/channel/channel_reports" style="float: right;"
+                                     ajax="false">
+                    </p:commandButton>
+                </f:facet>
 
                 <p:panel>
                     <h:panelGrid columns="2" >
@@ -118,7 +125,7 @@
                                     <f:convertNumber pattern="#,##,##0.00" />
                                 </p:outputLabel>
                             </p:column>
-                            
+
                             <p:column styleClass="numberCol" >
                                 <p:outputLabel value="#{a.beforeBallance}" >
                                     <f:convertNumber pattern="#,##,##0.00" />
@@ -134,7 +141,7 @@
                                     <f:convertNumber pattern="#,##,##0.00" />
                                 </p:outputLabel>
                             </p:column>
-                            
+
                         </p:subTable>
                     </p:dataTable>
                 </p:panel>
