--- a/src/main/webapp/channel/channel_report_agent_referece_book.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_referece_book.xhtml
@@ -13,7 +13,13 @@
         <h:form>
 
             <p:panel header="Cannel Agent Reperence Book">
-
+                <f:facet name="header">
+                    <p:outputLabel value="Cannel Agent Reperence Book" />
+                    <p:commandButton id="btnBack" value="Back" 
+                                     action="/channel/channel_reports" style="float: right;"
+                                     ajax="false">
+                    </p:commandButton>
+                </f:facet>
                 <p:panel>
                     <h:panelGrid columns="6">
                         <h:outputLabel value="From Date"/>
