--- a/src/main/webapp/clinical/clinical_favourite_item.xhtml
+++ b/src/main/webapp/clinical/clinical_favourite_item.xhtml
@@ -13,19 +13,22 @@
 
             <ui:define name="content">
 
-                <p:panel >
-                    <f:facet name="header" >
-                        <h:outputText value="Manage Favourite Medicines" >
-                        </h:outputText>
-                        <p:spacer width="40" height="1" ></p:spacer>
-                        <h:form >
-                            <p:commandButton ajax="false" value="Back" action="/clinical/clinical_administration" ></p:commandButton>
-                        </h:form>
-                    </f:facet>
+                <h:form >
+                    <p:panel styleClass="verticalAndHorizontalCenteringLarge" >
+                        <f:facet name="header" >
+                            <h:outputText value="Manage Favourite Medicines" >
+                            </h:outputText>
 
-                    <h:panelGrid columns="2" >
-                        <p:outputLabel value="Select Medicine" ></p:outputLabel>
-                        <h:form>
+                            <p:commandButton ajax="false" 
+                                             value="Back"
+                                             action="/clinical/clinical_administration"
+                                             style="float: right;"></p:commandButton>
+
+                        </f:facet>
+
+                        <h:panelGrid columns="2" >
+                            <p:outputLabel value="Select Medicine" ></p:outputLabel>
+
                             <p:autoComplete id="acItem" 
                                             value="#{favouriteController.item}" 
                                             forceSelection="true"
@@ -36,62 +39,102 @@
                                 </p:column>
                             </p:autoComplete>
                             <p:watermark for="acItem" value="Select Medicine"/>
-                        </h:form>
-                    </h:panelGrid>
 
-                    <p:dataTable value="#{favouriteController.items}" var="fi" >
-                        <p:column  >
-                            <f:facet name="header" >
-                                <h:outputText value="Medicine" ></h:outputText>
-                            </f:facet>
-                            <h:outputText value="#{fi.item}" ></h:outputText>
-                        </p:column>
-                        <p:column >
-                            <f:facet name="header" >
-                                <h:outputText value="Category" ></h:outputText>
-                            </f:facet>
-                            <h:outputText value="#{fi.category}" ></h:outputText>
-                        </p:column>
-                        <p:column >
-                            <f:facet name="header" >
-                                <h:outputText value="Dose" ></h:outputText>
-                            </f:facet>
-                            <h:outputText value="#{fi.dblValue1}" ></h:outputText>
-                        </p:column>
-                        <p:column >
-                            <f:facet name="header" >
-                                <h:outputText value="Dose Unit" ></h:outputText>
-                            </f:facet>
-                            <h:outputText value="#{fi.measurementUnit1}" ></h:outputText>
-                        </p:column>
-                        <p:column >
-                            <f:facet name="header" >
-                                <h:outputText value="Frequency" ></h:outputText>
-                            </f:facet>
-                            <h:outputText value="#{fi.measurementUnit2}" ></h:outputText>
-                        </p:column>
-                        <p:column >
-                            <f:facet name="header" >
-                                <h:outputText value="Duration" ></h:outputText>
-                            </f:facet>
-                            <h:outputText value="#{fi.dblValue2}" ></h:outputText>
-                        </p:column>
-                        <p:column >
-                            <f:facet name="header" >
-                                <h:outputText value="Duration Unit" ></h:outputText>
-                            </f:facet>
-                            <h:outputText value="#{fi.measurementUnit2}" ></h:outputText>
-                        </p:column>
+                            <p:commandButton value="Add New"
+                                             onclick="PF('dlg2').show();"
+                                             action="#{favouriteController.prepareAddingFavouriteItem()}" >
+                            </p:commandButton>
+                            <p:dialog header="Add Favourite Medicine" widgetVar="dlg2" modal="true" height="100">
+                                <h:panelGrid columns="2" >
 
-                    </p:dataTable>
+                                    <h:outputText value="Category" ></h:outputText>
+                                    <p:selectOneMenu    
+                                        value="#{favouriteController.current.category}" style="min-width: 223px">
+                                        <f:selectItem itemLabel="Select Category" ></f:selectItem>
+                                        <f:selectItems  value="#{pharmaceuticalItemCategoryController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                    </p:selectOneMenu>
 
-                </p:panel>
 
-                <h:form>
+                                    <h:outputText value="Dose" ></h:outputText>
+                                    <h:outputText value="#{favouriteController.current.dblValue1}" ></h:outputText>
 
+                                    <h:outputText value="Dose Unit" ></h:outputText>
+                                    <p:selectOneMenu      value="#{favouriteController.current.measurementUnit1}" style="min-width: 223px">
+                                        <f:selectItem itemLabel="Select Dose Unit" ></f:selectItem>
+                                        <f:selectItems  value="#{measurementUnitController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                    </p:selectOneMenu>
+
+                                    <h:outputText value="Frequency" ></h:outputText>
+                                    <h:outputText value="#{favouriteController.current.measurementUnit2}" ></h:outputText>
+                                    <p:selectOneMenu    
+                                        value="#{favouriteController.current.measurementUnit2}"
+                                        style="min-width: 223px">
+                                        <f:selectItem itemLabel="Select Frequency" ></f:selectItem>
+                                        <f:selectItems  value="#{frequencyUnitController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                    </p:selectOneMenu>
+
+                                    <h:outputText value="Duration" ></h:outputText>
+                                    <h:outputText value="#{favouriteController.current.dblValue2}" ></h:outputText>
+
+                                    <h:outputText value="Duration Unit" ></h:outputText>
+                                    <h:outputText value="#{favouriteController.current.measurementUnit2}" ></h:outputText>
+
+                                </h:panelGrid>
+
+                            </p:dialog> 
+
+
+                        </h:panelGrid>
+
+
+                        <p:dataTable value="#{favouriteController.items}" var="fi" >
+                            <p:column  >
+                                <f:facet name="header" >
+                                    <h:outputText value="Medicine" ></h:outputText>
+                                </f:facet>
+                                <h:outputText value="#{fi.item}" ></h:outputText>
+                            </p:column>
+                            <p:column >
+                                <f:facet name="header" >
+                                    <h:outputText value="Category" ></h:outputText>
+                                </f:facet>
+                                <h:outputText value="#{fi.category}" ></h:outputText>
+                            </p:column>
+                            <p:column >
+                                <f:facet name="header" >
+                                    <h:outputText value="Dose" ></h:outputText>
+                                </f:facet>
+                                <h:outputText value="#{fi.dblValue1}" ></h:outputText>
+                            </p:column>
+                            <p:column >
+                                <f:facet name="header" >
+                                    <h:outputText value="Dose Unit" ></h:outputText>
+                                </f:facet>
+                                <h:outputText value="#{fi.measurementUnit1}" ></h:outputText>
+                            </p:column>
+                            <p:column >
+                                <f:facet name="header" >
+                                    <h:outputText value="Frequency" ></h:outputText>
+                                </f:facet>
+                                <h:outputText value="#{fi.measurementUnit2}" ></h:outputText>
+                            </p:column>
+                            <p:column >
+                                <f:facet name="header" >
+                                    <h:outputText value="Duration" ></h:outputText>
+                                </f:facet>
+                                <h:outputText value="#{fi.dblValue2}" ></h:outputText>
+                            </p:column>
+                            <p:column >
+                                <f:facet name="header" >
+                                    <h:outputText value="Duration Unit" ></h:outputText>
+                                </f:facet>
+                                <h:outputText value="#{fi.measurementUnit2}" ></h:outputText>
+                            </p:column>
+
+                        </p:dataTable>
+
+                    </p:panel>
                 </h:form>
-
-
             </ui:define>
 
         </ui:composition>
