--- a/src/main/webapp/pharmacy/pharmacy_vmp.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_vmp.xhtml
@@ -9,18 +9,18 @@
 
     <ui:define name="content">
         <h:form>
-            <p:panel header="Manage VMPs" >
-                <p:panelGrid columns="2" style="min-width: 100%;" >
-                    <p:panel header="List of VMPs" >
+            <p:panel header="Manage Products" styleClass="verticalAndHorizontalCenteringLarge" >
+                <h:panelGrid columns="2" style="min-width: 100%;"  styleClass="alignTop" >
+                    <p:panel header="List" >
                         <h:inputText autocomplete="off"  value="#{vmpController.selectText}" >
                             <f:ajax execute="@this" render="lstSelect" event="keyup" />
                         </h:inputText>
-                        <p:selectOneListbox style="max-height: 400px;min-width: 200px;" id="lstSelect" value="#{vmpController.current}">
+                        <p:selectOneListbox style="height: 300px;min-width: 200px;" id="lstSelect" value="#{vmpController.current}">
                             <f:selectItems value="#{vmpController.selectedItems}" itemLabel="#{v.name}" var="v" itemValue="#{v}"/>
                             <f:ajax render="gpDetail" execute="lstSelect viv" >
                             </f:ajax>
                         </p:selectOneListbox>
-                        <p:panelGrid id="gpSelectButtons" columns="3"  >
+                        <h:panelGrid id="gpSelectButtons" columns="3"  >
                             <p:commandButton id="btnAdd" value="Add" ajax="false" action="#{vmpController.prepareAdd()}" styleClass="buttons" >
                                 <p:ajax update="btnAdd  btnDelete gpDetail " process="btnAdd" >
                                 </p:ajax>
@@ -28,27 +28,33 @@
                             <p:commandButton id="btnDelete" ajax="false" onclick="if (!confirm('Are you sure you want to delete this record?'))
                                         return false;" action="#{vmpController.delete()}"  value="Delete"  >
                             </p:commandButton>
-                        </p:panelGrid>
+                        </h:panelGrid>
                     </p:panel>
-                    <p:panel id="gpDetail" header="Details of VMP" >
-                        <p:panelGrid columns="2" >
+                    <p:panel id="gpDetail" header="Details" >
+                        <h:panelGrid columns="2" styleClass="alignTop" >
 
-                            <h:outputLabel value="Select Generic Name" ></h:outputLabel>
+                            <h:outputLabel value="Generic Name" style="white-space: nowrap;" ></h:outputLabel>
                             <p:autoComplete converter="vtm" value="#{vmpController.addingVtmInVmp.vtm}" 
                                             forceSelection="true"
                                             completeMethod="#{vtmController.completeVtm}" var="vt" itemLabel="#{vt.name}" itemValue="#{vt}" >
                             </p:autoComplete>
+                           
                             <h:outputLabel value="Strength" >
                             </h:outputLabel>
-                            <h:panelGroup >
-                                <p:inputText autocomplete="off" value="#{vmpController.addingVtmInVmp.strength}" ></p:inputText>
-                                <p:selectOneMenu value="#{vmpController.addingVtmInVmp.strengthUnit}">
-                                    <f:selectItems value="#{measurementUnitController.items}" var="m" itemValue="#{m}" itemLabel="#{m.name}"/>
-                                </p:selectOneMenu>                          
-                            </h:panelGroup>
+
+                            <p:inputText autocomplete="off" value="#{vmpController.addingVtmInVmp.strength}" ></p:inputText>
+                            
+                            <h:outputLabel value="Strength Unit" >
+                            </h:outputLabel>
+                            <p:selectOneMenu value="#{vmpController.addingVtmInVmp.strengthUnit}">
+                                <f:selectItem itemLabel="Select Strength Unit" ></f:selectItem>
+                                <f:selectItems value="#{measurementUnitController.items}" var="m" itemValue="#{m}" itemLabel="#{m.name}"/>
+                            </p:selectOneMenu>                          
+
                             <h:outputLabel value="Type" ></h:outputLabel>
 
                             <p:selectOneMenu value="#{vmpController.current.category}">
+                                <f:selectItem itemLabel="Select Category" ></f:selectItem>
                                 <f:selectItems value="#{pharmaceuticalItemTypeController.items}" var="cat" itemValue="#{cat}" itemLabel="#{cat.name}"/>
                             </p:selectOneMenu>
 
@@ -59,7 +65,7 @@
                             <p:commandButton value="Add" ajax="false" action="#{vmpController.addVtmInVmp()}" >
                             </p:commandButton>
 
-                        </p:panelGrid>
+                        </h:panelGrid>
 
                         <p:dataTable id="viv" value="#{vmpController.vivs}" var="v" >
 
@@ -81,7 +87,7 @@
 
                     </p:panel>
 
-                </p:panelGrid>
+                </h:panelGrid>
 
             </p:panel>
         </h:form>
