--- a/src/main/webapp/admin_doctor.xhtml
+++ b/src/main/webapp/admin_doctor.xhtml
@@ -18,8 +18,14 @@
 
 
 
-                <p:panel header="Manage Doctor" >
-                    <h:panelGrid id ="gpVeda" columns="2" >
+                <p:panel styleClass="verticalAndHorizontalCenteringLarge" >
+
+                    <f:facet name="header" >
+                        <h:outputText value="Manage Doctors" ></h:outputText>
+                        <p:commandButton ajax="false" action="/admin_manage_staff_index" value="Back" style="float: right; padding-right: 30px;" ></p:commandButton>
+                    </f:facet>
+
+                    <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop" >
 
                         <h:panelGrid id="gpSelect" columns="1"  >
                             <p:panel >
@@ -50,6 +56,12 @@
                                 <h:panelGrid id="gpDetailText" columns="2">
                                     <h:outputText  value="Name" />
                                     <p:inputText autocomplete="off" value="#{doctorController.current.person.name}"  />
+                                    <h:outputText value="Title" />
+                                    <p:selectOneMenu value="#{doctorController.current.person.title}" >
+                                        <f:selectItem itemLabel="Please select a title"/>
+                                        <f:selectItems value="#{enumController.title}" var="t"
+                                                       itemLabel="#{t.label}" itemValue="#{t}" />
+                                    </p:selectOneMenu>
                                     <h:outputText  value="Phone" />
                                     <p:inputMask mask="999-999999" value="#{doctorController.current.person.phone}"  />
                                     <h:outputText  value="Fax" />
@@ -59,10 +71,10 @@
                                     <h:outputText  value="Address" />
                                     <p:inputText autocomplete="off" value="#{doctorController.current.person.address}"  />
                                     <h:outputText value="Speciality" />
-                                    <h:selectOneListbox size="1" value="#{doctorController.current.speciality}" >
+                                    <p:selectOneMenu value="#{doctorController.current.speciality}" >
                                         <f:selectItem itemLabel="Please select a speciality"/>
                                         <f:selectItems value="#{specialityController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                                    </h:selectOneListbox>
+                                    </p:selectOneMenu>
                                     <h:outputText value="Registration" />
                                     <p:inputText autocomplete="off" value="#{doctorController.current.registration}" />
                                     <h:outputText value="Qualification" />
