--- a/src/main/webapp/admin_doctor_consultant.xhtml
+++ b/src/main/webapp/admin_doctor_consultant.xhtml
@@ -18,8 +18,8 @@
 
 
 
-                <p:panel header="Manage Doctor" >
-                    <h:panelGrid id ="gpVeda" columns="2" >
+                <p:panel header="Manage Doctor" styleClass="verticalAndHorizontalCenteringLarge" >
+                    <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop" >
 
                         <h:panelGrid id="gpSelect" columns="1"  >
                             <p:panel >
@@ -59,10 +59,10 @@
                                     <h:outputText  value="Address" />
                                     <p:inputText autocomplete="off" value="#{consultantController.current.person.address}"  />
                                     <h:outputText value="Speciality" />
-                                    <h:selectOneListbox size="1" value="#{consultantController.current.speciality}" >
+                                    <p:selectOneMenu  value="#{consultantController.current.speciality}" >
                                         <f:selectItem itemLabel="Please select a speciality"/>
                                         <f:selectItems value="#{specialityController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                                    </h:selectOneListbox>
+                                    </p:selectOneMenu>
                                     <h:outputText value="Registration" />
                                     <p:inputText autocomplete="off" value="#{consultantController.current.registration}" />
                                     <h:outputText value="Qualification" />
