--- a/src/main/webapp/admin_doctor_speciality.xhtml
+++ b/src/main/webapp/admin_doctor_speciality.xhtml
@@ -18,8 +18,13 @@
 
 
 
-                <p:panel header="Manage Doctor Speciality" >
-                    <h:panelGrid id ="gpVeda" columns="2" >
+                <p:panel styleClass="verticalAndHorizontalCenteringLarge" >
+                    <f:facet name="header" >
+                        <h:outputText value="Manage Doctor Specialities" ></h:outputText>
+                        <p:commandButton ajax="false" action="/admin_manage_staff_index" value="Back" style="float: right; padding-right: 30px;" ></p:commandButton>
+                    </f:facet>
+                    
+                    <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop" >
 
                         <h:panelGrid id="gpSelect" columns="1"  >
                             <p:panel >
