all channel report Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -31,6 +31,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="  Bill Summary" action="/channel/channel_report_all_booking"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="  Bill Detail Summary" action="/channel/channel_report_by_bill_class"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="  All Department Bill Summary" action="/channel/channel_report_department_wise_bills"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="  All Channel Bills" action="/channel/channel_report_all_bills"/>
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
