--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -19,6 +19,8 @@
                                         <p:commandButton styleClass="linkButton" value="Income With Agent Bookings" action="/channel/income_with_agent_bookings" ajax="false"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Income By FeeType By Sessoin Date" action="/channel/channel_report_by_fee_1"/>
                                         <p:commandButton styleClass="linkButton" value="Channel Patient Counts(34)" action="/channel/channel_report_patient_count" ajax="false"/>
+                                        <p:commandButton styleClass="linkButton" value="Channel Hospital Income" action="/channel/channel_report_patient_count_income" ajax="false"/>
+                                        
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
