--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -53,7 +53,8 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Statement(27)" action="/channel/channel_report_agent_history_1"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Balance(32)" action="/channel/channel_report_agent_balance"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Deposit(36)" action="/channel/channel_report_agent_payment_bill"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="Channel Books Report"  action="/channel/channel_report_agent_referece_book" />
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Agent Wise Channel Appoinment Total()" action="/channel/channel_report_agent_wise_channel_total"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Channel Books Report()"  action="/channel/channel_report_agent_referece_book" />
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
